--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
         <h2>Recent Posts</h2>
         <hr />
         <ul>
-          {% for post in posts %}
+          {% for post in site.posts %}
             <li>
               <a href="{{ post.url }}">{{ post.title }}</a>
               <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
