--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@ layout: default
       <div class="col-md-8">
         <h2>Recent Posts</h2>
         <hr />
-        <ul>
-          {% for post in site.posts %}
-            <li>
-              <a href="{{ post.url }}">{{ post.title }}</a>
-              <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
-            </li>
-          {% endfor %}
-          </ul>
+        {% for post in site.posts %}
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <p>{{ post.excerpt }}</p>
+          <p> {{ post.date | date: "%B %-d, %Y" }} </p>
+          <hr />
+        {% endfor %}
         <br />
         <br />
         {{ site.time }}
