--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8">
-        <h2>Recent Posts</h2>
+      <div class="col-md-12">
+        <h2>Recent posts</h2>
         <hr />
         {% for post in site.posts %}
-          <a href="{{ post.url }}">{{ post.title }}</a>
+          <h3 href="{{ post.url }}">{{ post.title }}</h3>
           <p>{{ post.excerpt }}</p>
           <p> {{ post.date | date: "%B %-d, %Y" }} </p>
           <hr />
@@ -37,7 +36,6 @@ layout: default
         {{ site.time }}
         <br />
       </div>
-      <div class="col-md-2"></div>
     </div>
   </div>
 
