--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
         <h2>Recent posts</h2>
         <hr />
         {% for post in site.posts %}
-          <h3 href="{{ post.url }}">{{ post.title }}</h3>
+          <a href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
           <p>{{ post.excerpt }}</p>
           <p> {{ post.date | date: "%B %-d, %Y" }} </p>
           <hr />
