--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
         <h2>Recent posts</h2>
         <hr />
         {% for post in site.posts %}
           <a href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
           <p>{{ post.excerpt }}</p>
-          <p> {{ post.date | date: "%B %-d, %Y" }} </p>
+          <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
           <hr />
         {% endfor %}
         <br />
-        <br />
-        {{ site.time }}
+        Generated {{ site.time }}
         <br />
       </div>
+      <div class="col-md-2"></div>
     </div>
   </div>
 
