--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@ layout: default
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-    <a class="navbar-brand" href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer / Blog</a>
+    <span class="navbar-brand" style="color: #222;">
+      <a href="http://lukasnpalmer.com">Lukas Palmer</a>
+      /
+      <a href="http://lnpalmer.github.io">Blog</a>
+    </span>
   </nav>
 
   <br />
