--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ layout: default
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <span class="navbar-brand" style="color: #222;">
-      <a href="http://lukasnpalmer.com">Lukas Palmer</a>
+      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
       /
-      <a href="http://lnpalmer.github.io">Blog</a>
+      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
     </span>
   </nav>
 
