--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <span class="navbar-brand" style="color: #222;">
       <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
-      <a style="color: #222;"> / </a>
+      <a style="color: #222; pointer-events: none;"> / </a>
       <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
     </span>
   </nav>
