--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ layout: default
           <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
           <hr />
         {% endfor %}
-        <br />
-        Generated {{ site.time }}
+        <span class="text-muted">Generated {{ site.time }}</span>
         <br />
       </div>
       <div class="col-md-2"></div>
