--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
           <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
           <hr />
         {% endfor %}
-        <span class="text-muted">Generated {{ site.time }}</span>
+        <!--<span class="text-muted">Generated {{ site.time }}</span>-->
         <br />
       </div>
       <div class="col-md-2"></div>
