--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ layout: default
       <div class="col-md-8">
         <h2>Recent posts</h2>
         <hr />
-        {% for post in site.posts %}
+        <!-- {% for post in site.posts %}
           <a href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
           <p>{{ post.excerpt }}</p>
           <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
           <hr />
-        {% endfor %}
-        <!--<span class="text-muted">Generated {{ site.time }}</span>-->
+        {% endfor %} -->
+        <span class="text-muted">Generated {{ site.time }}</span>
         <br />
       </div>
       <div class="col-md-2"></div>
