--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: null
 ---
 
 <!DOCTYPE html>
@@ -30,12 +30,12 @@ layout: default
       <div class="col-md-8">
         <h2>Recent posts</h2>
         <hr />
-        <!-- {% for post in site.posts %}
+        {% for post in site.posts %}
           <a href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
           <p>{{ post.excerpt }}</p>
           <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
           <hr />
-        {% endfor %} -->
+        {% endfor %}
         <span class="text-muted">Generated {{ site.time }}</span>
         <br />
       </div>
