--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ layout: null
           <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
           <hr />
         {% endfor %}
-        <span class="text-muted">Generated {{ site.time }}</span>
-        <br />
+        <small class="text-muted">Generated {{ site.time }}</small>
       </div>
       <div class="col-md-2"></div>
     </div>
