trying to fix Liquid

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: null
         <div class="nav navbar-nav">
             <a class="nav-item nav-link" active"" href="#" id="aboutNav">About</a>
             <a class="nav-item nav-link" href="#" id="projectsNav">Projects</a>
-            <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/blog.html">Blog <span class="label label-warning">WIP</span></a>
+            <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/recent.html">Blog <span class="label label-warning">WIP</span></a>
             <a class="hideSmall btn btn-success-outline pull-xs-right" href="mailto:lukas.palmer.dev@gmail.com">Contact</a>
         </div>
     </nav>
