--- a/recent.html
+++ b/recent.html
@@ -25,7 +25,7 @@ layout: null
     <span class="navbar-brand" style="color: #222;">
       <a href="http://lnpalmer.github.io" style="color: #222;">Lukas Palmer</a>
        /
-      <a href="http://lnpalmer.github.io/blog.html" style="color: #222;">Blog</a>
+      <a href="http://lnpalmer.github.io/recent.html" style="color: #222;">Blog</a>
     </span>
   </nav>
 
