--- a/index.html
+++ b/index.html
@@ -1,59 +1,58 @@
-﻿---
+---
 layout: null
-is_page: true
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script>
+  <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-79834876-2', 'auto');
     ga('send', 'pageview');
-    </script>
+  </script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ site.url }}/darkly.css">
-    <title>Lukas Palmer / Blog</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.url }}/darkly.css">
+  <title>Lukas Palmer / Blog</title>
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-        <span class="navbar-brand" style="color: #222;">
-            <a href="http://lnpalmer.github.io" style="color: #222;">Lukas Palmer</a>
-            /
-            <a href="http://lnpalmer.github.io/blog.html" style="color: #222;">Blog</a>
-        </span>
-    </nav>
+  <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
+    <span class="navbar-brand" style="color: #222;">
+      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
+       /
+      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
+    </span>
+  </nav>
 
-    <br />
-    <br />
-    <br />
+  <br />
+  <br />
+  <br />
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <h2>Recent posts</h2>
-                <hr />
-                {% for post in site.posts %}
-                {% if post.ready %}
-                <a href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
-                <p>{{ post.excerpt }}</p>
-                <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
-                <hr />
-                {% endif %}
-                {% endfor %}
-                <small class="text-muted">Generated {{ site.time }}</small>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2>Recent posts</h2>
+        <hr />
+        {% for post in site.posts %}
+          {% if post.ready %}
+            <a href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
+            <p>{{ post.excerpt }}</p>
+            <p><i> {{ post.date | date: "%B %-d, %Y" }} </i></p>
+            <hr />
+          {% endif %}
+        {% endfor %}
+        <small class="text-muted">Generated {{ site.time }}</small>
+      </div>
+      <div class="col-md-2"></div>
     </div>
+  </div>
 
-    <script src="{{ site.url }}/bootstrap/js/bootstrap.min.js"></script>
+  <script src="{{ site.url }}/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
