--- a/index.html
+++ b/index.html
@@ -124,5 +124,6 @@ window.twttr = (function(d, s, id) {
       return t;
       }(document, "script", "twitter-wjs"));
     </script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
