--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-79834876-2', 'auto');
-    ga('send', 'pageview');
-  </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-79834876-2', 'auto');
+        ga('send', 'pageview');
+    </script>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/style.css">
-  <title>Lukas Palmer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Lukas Palmer</title>
 </head>
 <body onload="setup()">
     <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
@@ -22,7 +24,7 @@
         <div class="nav navbar-nav">
             <a class="nav-item nav-link" active"" href="#" id="aboutNav">About</a>
             <a class="nav-item nav-link" href="#" id="projectsNav">Projects</a>
-            <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/blog.html">Blog <span class="label label-warning">WIP</span></a>
+            <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/blog.html">Blog</a>
             <a class="hideSmall btn btn-success-outline pull-xs-right" href="mailto:lukas.palmer.dev@gmail.com">Contact</a>
         </div>
     </nav>
@@ -104,25 +106,25 @@
     <script src="assets/coffee/events.js"></script>
     <script src="assets/coffee/AboutModule.js"></script>
     <script src="assets/coffee/ProjectsModule.js"></script>
-    
+
     <!-- Twitter widgets -->
     <script>
-window.twttr = (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0],
-        t = window.twttr || {};
-      if (d.getElementById(id)) return t;
-      js = d.createElement(s);
-      js.id = id;
-      js.src = "https://platform.twitter.com/widgets.js";
-      fjs.parentNode.insertBefore(js, fjs);
+        window.twttr = (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+              t = window.twttr || {};
+            if (d.getElementById(id)) return t;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
 
-      t._e = [];
-      t.ready = function(f) {
-        t._e.push(f);
-      };
+            t._e = [];
+            t.ready = function (f) {
+                t._e.push(f);
+            };
 
-      return t;
-      }(document, "script", "twitter-wjs"));
+            return t;
+        }(document, "script", "twitter-wjs"));
     </script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
