--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: null
 ---
 
@@ -23,9 +23,9 @@ layout: null
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <span class="navbar-brand" style="color: #222;">
-      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
+      <a href="http://lnpalmer.github.io" style="color: #222;">Lukas Palmer</a>
        /
-      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
+      <a href="http://lnpalmer.github.io/blog.html" style="color: #222;">Blog</a>
     </span>
   </nav>
 
