--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
         <a class="navbar-brand" href="#">Lukas Palmer</a>
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link" active"" href="#" id="aboutNav">About</a>
+            <a class="nav-item nav-link active" href="#" id="aboutNav">About</a>
             <a class="nav-item nav-link" href="#" id="projectsNav">Projects</a>
-            <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/blog.html">Blog</a>
+            <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/blog.html">Blog </a>
             <a class="hideSmall btn btn-success-outline pull-xs-right" href="mailto:lukas.palmer.dev@gmail.com">Contact</a>
         </div>
     </nav>
@@ -81,7 +81,7 @@
                     <img class="card-img-top img-fluid" src="assets/Neuricon.png" alt="Card image cap">
                     <div class="card-block">
                         <h4 class="card-title"><a href="http://github.com/lnpalmer/rnet">rnet</a></h4>
-                        <p class="card-text">A learning experience with recurrent neural networks (RNNs).</p>
+                        <p class="card-text">A learning experience with recurrent neural networks.</p>
                     </div>
                 </div>
             </div>
