--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
         <a class="navbar-brand" href="#">Lukas Palmer</a>
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="#" id="aboutNav">About</a>
+            <a class="nav-item nav-link" href="#" id="aboutNav">About</a>
             <a class="nav-item nav-link" href="#" id="projectsNav">Projects</a>
             <a class="hideSmall nav-item nav-link" href="http://lnpalmer.github.io/blog.html">Blog </a>
             <a class="hideSmall btn btn-success-outline pull-xs-right" href="mailto:lukas.palmer.dev@gmail.com">Contact</a>
