--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: null
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <span class="navbar-brand" style="color: #222;">
-      <a href="http://lukasnpalmer.com" style="color: #222;">lnpalmer</a>
+      <a href="http://lnpalmer.io" style="color: #222;">lnpalmer</a>
        /
       <a href="http://lnpalmer.github.io" style="color: #222;">blog</a>
     </span>
